makes twilio SMS fully functional and creates users in db

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 511_AUTH_TOKEN: '807178e4-875f-46f4-87e5-e5ec461b99f0'
+TWILIO_API_KEY: 'AC6dd86d8d0f9a8099922be98a1f6ab5c9'
+TWILIO_API_SECRET: 'b0fb7627b9101d47e814501bfbcbb8f1'
